syntax = "proto3";
package rarimo.rarimocore.oraclemanager;

import "tokenmanager/item.proto";
import "rarimocore/vote.proto";
import "oraclemanager/oracle.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/rarimo/rarimo-core/x/oraclemanager/types";

// Msg defines the Msg service.
service Msg {
  rpc Stake(MsgStake) returns (MsgStakeResponse);
  rpc Unstake(MsgUnstake) returns (MsgUnstakeResponse);
  rpc CreateTransferOperation(MsgCreateTransferOp) returns (MsgCreateTransferOpResponse);
  rpc CreateIdentityDefaultTransferOperation(MsgCreateIdentityDefaultTransferOp) returns (MsgCreateIdentityDefaultTransferOpResponse);
  rpc CreateIdentityGISTTransferOperation(MsgCreateIdentityGISTTransferOp) returns (MsgCreateIdentityGISTTransferOpResponse);
  rpc CreateIdentityStateTransferOperation(MsgCreateIdentityStateTransferOp) returns (MsgCreateIdentityStateTransferOpResponse);
  rpc CreateWorldCoinIdentityTransferOperation(MsgCreateWorldCoinIdentityTransferOp) returns (MsgCreateWorldCoinIdentityTransferOpResponse);
  rpc Vote(MsgVote) returns(MsgVoteResponse);
  rpc Unjail(MsgUnjail) returns(MsgUnjailResponse);
}

message MsgStake {
  rarimo.rarimocore.oraclemanager.OracleIndex index = 1;
  string amount = 2;
  string from = 3;
}

message MsgStakeResponse {
}

message MsgUnstake {
  rarimo.rarimocore.oraclemanager.OracleIndex index = 1;
  string sender = 2;
}

message MsgUnstakeResponse {
}

message MsgCreateTransferOp {
  string creator = 1;
  // Information to identify transfer
  string tx = 2;
  string eventId = 3;
  string sender = 4;
  // Information about deposit
  string receiver = 5;
  string amount = 6;
  string bundleData = 7;// hex-encoded
  string bundleSalt = 8;// hex-encoded
  // Information about current and target chains
  rarimo.rarimocore.tokenmanager.OnChainItemIndex from = 9 [(gogoproto.nullable) = false];
  rarimo.rarimocore.tokenmanager.OnChainItemIndex to = 10 [(gogoproto.nullable) = false];
  rarimo.rarimocore.tokenmanager.ItemMetadata meta = 11; // Optional (if item currently does not exists)
}

message MsgCreateTransferOpResponse {}

message MsgCreateIdentityDefaultTransferOp {
  string creator = 1;
  // Hex 0x
  string contract = 2;
  string chain = 3;
  // Hex 0x
  string GISTHash = 4;
  // Hex 0x
  string id = 5;
  // Hex 0x
  string stateHash = 6;
  // Dec
  string stateCreatedAtTimestamp = 7;
  string stateCreatedAtBlock = 8;
  // Hex 0x
  string stateReplacedBy = 11;
  string GISTReplacedBy = 12;
  // Dec
  string GISTCreatedAtTimestamp = 13;
  string GISTCreatedAtBlock = 14;
  // HEx 0x
  string replacedStateHash = 17;
  string replacedGISTtHash = 18;
}

message MsgCreateIdentityDefaultTransferOpResponse {}

message MsgCreateIdentityGISTTransferOp {
  string creator = 1;
  // Hex 0x
  string contract = 2;
  string chain = 3;
  // Hex 0x
  string GISTHash = 4;
  // Dec
  string GISTCreatedAtTimestamp = 5;
  string GISTCreatedAtBlock = 6;
  // HEx 0x
  string replacedGISTtHash = 7;
}

message MsgCreateIdentityGISTTransferOpResponse {}

message MsgCreateIdentityStateTransferOp {
  string creator = 1;
  // Hex 0x
  string contract = 2;
  string chain = 3;
  // Hex 0x
  string id = 5;
  // Hex 0x
  string stateHash = 6;
  // Dec
  string stateCreatedAtTimestamp = 7;
  string stateCreatedAtBlock = 8;
  // HEx 0x
  string replacedStateHash = 17;
}

message MsgCreateIdentityStateTransferOpResponse {}

message MsgCreateWorldCoinIdentityTransferOp {
  string creator = 1;
  string contract = 2;
  string chain = 3;
  // Hex 0x uint256
  string prevState = 4;
  // Hex 0x uint256
  string state = 5;
  // Dec uint256
  string timestamp = 6;
  uint64 blockNumber = 7;
}

message MsgCreateWorldCoinIdentityTransferOpResponse {}

message MsgVote{
  rarimo.rarimocore.oraclemanager.OracleIndex index = 1;
  string operation = 2;
  rarimo.rarimocore.rarimocore.VoteType vote = 3;
}

message MsgVoteResponse {}

message MsgUnjail{
  rarimo.rarimocore.oraclemanager.OracleIndex index = 1;
}

message MsgUnjailResponse {}